--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
     <!-- Basic SEO -->
-    <meta name="description" content="Curated travel organizers and custom pillow cases. Three simple products, clear quality, no fuss." />
+    <meta name="description" content="Curated travel organizers, bathrobes, and custom pillow cases. Four simple products, clear quality, no fuss." />
     <link rel="canonical" href="https://www.eliraliving.com/" />
 
     <!-- Social (Open Graph / Twitter) -->
     <meta property="og:title" content="ELIRA LIVING — Travel & Home Essentials" />
-    <meta property="og:description" content="Curated travel organizers and custom pillow cases. Three simple products, clear quality, no fuss." />
+    <meta property="og:description" content="Curated travel organizers, bathrobes, and custom pillow cases. Four simple products, clear quality, no fuss." />
     <meta property="og:url" content="https://www.eliraliving.com/" />
     <meta property="og:image" content="https://www.eliraliving.com/images/hero.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -87,6 +87,7 @@
       .tiles article.style1 a:before { background: rgba(233,62,93,.88); }   /* pink */
       .tiles article.style2 a:before { background: rgba(63,139,201,.88); }  /* blue */
       .tiles article.style3 a:before { background: rgba(64,170,160,.88); }  /* teal */
+      .tiles article.style4 a:before { background: rgba(120,94,240,.88); }  /* purple */
 
       /* Reveal-on-scroll */
       .reveal { opacity: 0; transform: translateY(18px);
@@ -157,7 +158,7 @@
         <div class="inner">
           <header class="reveal">
             <h1>Everyday travel goods that simply work</h1>
-            <p>Curated essentials for tidy packing and cozy living. Three products, clear quality, no fuss.</p>
+            <p>Curated essentials for tidy packing and cozy living. Four products, clear quality, no fuss.</p>
             <span class="image main hero-zoom">
               <!-- Make sure /images/hero.jpg exists (1600×900 recommended) -->
               <img src="images/hero.jpg" alt="Travel and home essentials by ELIRA LIVING" />
@@ -201,6 +202,20 @@
                 <h2>Customized Pillow Case</h2>
                 <div class="content">
                   <p>Personalized pillow cover with your name or design, made to order.</p>
+                </div>
+              </a>
+            </article>
+
+            <!-- Product 4 (NEW) -->
+            <article class="style4">
+              <span class="image">
+                <!-- Replace with your real image or Cloudinary URL -->
+                <img src="images/bathrobe.jpg" alt="Bathrobe" />
+              </span>
+              <a href="bathrobe.html">
+                <h2>Bathrobe</h2>
+                <div class="content">
+                  <p>Plush, absorbent, unisex bathrobe for cozy mornings and relaxed evenings.</p>
                 </div>
               </a>
             </article>
