--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <meta property="og:title" content="ELIRA LIVING — Travel & Home Essentials" />
   <meta property="og:description" content="Curated travel organizers, bathrobes, and custom pillow cases. Four simple products, clear quality, no fuss." />
   <meta property="og:url" content="https://www.eliraliving.com/" />
-  <meta property="og:image" content="https://www.eliraliving.com/images/hero.jpg" />
+  <!-- Use the same Cloudinary hero for rich previews -->
+  <meta property="og:image" content="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Favicon -->
@@ -27,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Fraunces:opsz,wght@9..144,500;9..144,600;9..144,700&display=swap" rel="stylesheet">
 
   <!-- Preload hero for snappy paint -->
-  <link rel="preload" as="image" href="images/hero.jpg">
+  <link rel="preload" as="image" href="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg">
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -241,7 +242,16 @@
 
         <!-- HERO with overlay content -->
         <section class="hero reveal" aria-label="Brand hero">
-          <img src="images/hero.jpg" alt="Travel and home essentials by ELIRA LIVING">
+          <!-- Cloudinary hero (with responsive srcset) -->
+          <img
+            src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg"
+            srcset="
+              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_800/v1760713090/pexels-olly-3756045_chihfn.jpg 800w,
+              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760713090/pexels-olly-3756045_chihfn.jpg 1200w,
+              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg 1600w,
+              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_2000/v1760713090/pexels-olly-3756045_chihfn.jpg 2000w"
+            sizes="(max-width: 768px) 100vw, 100vw"
+            alt="Travel and home essentials by ELIRA LIVING">
           <div class="hero__content">
             <div class="hero__copy">
               <h1>Everyday goods for calm, tidy living.</h1>
