--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
-  Luxury skin + hero overlay + trust band
+  Luxury skin + full-bleed video hero + trust band
 -->
 <html lang="en">
 <head>
@@ -17,7 +17,7 @@
   <meta property="og:title" content="ELIRA LIVING — Travel & Home Essentials" />
   <meta property="og:description" content="Curated travel organizers, bathrobes, and custom pillow cases. Four simple products, clear quality, no fuss." />
   <meta property="og:url" content="https://www.eliraliving.com/" />
-  <!-- Use the same Cloudinary hero for rich previews -->
+  <!-- Use poster as the OG image -->
   <meta property="og:image" content="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -27,7 +27,7 @@
   <!-- Fonts (luxury pairing) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Fraunces:opsz,wght@9..144,500;9..144,600;9..144,700&display=swap" rel="stylesheet">
 
-  <!-- Preload hero for snappy paint -->
+  <!-- Preload hero poster for snappy paint -->
   <link rel="preload" as="image" href="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg">
 
   <!-- Template CSS -->
@@ -75,19 +75,38 @@
     #header.shrink .inner { padding-top: .35rem; }
     #header.shrink .logo .symbol img { height: 22px; }
 
-    /* ---------- HERO with overlay ---------- */
-    .hero {
-      position: relative; margin-top: .4rem;
-      border-radius: var(--radius-xl);
-      overflow: hidden; box-shadow: var(--lux-shadow);
+    /* ---------- Full-bleed helper ---------- */
+    .full-bleed{
+      position: relative;
+      left: 50%;
+      right: 50%;
+      margin-left: calc(50% - 50vw);
+      margin-right: calc(50% - 50vw);
+      width: 100vw;
     }
-    .hero img {
-      width: 100%; height: 540px; object-fit: cover; display:block;
+
+    /* ---------- HERO (supports video or image) ---------- */
+    .hero {
+      position: relative;
+      margin-top: .4rem;
+      border-radius: var(--radius-xl);
+      overflow: hidden;
+      box-shadow: var(--lux-shadow);
+      height: 540px; /* control block height; media fills it */
+    }
+    @media (max-width: 768px){
+      .hero { height: 320px; }
+    }
+
+    .hero__media{ position:absolute; inset:0; overflow:hidden; }
+    .hero__media video, .hero__media img{
+      position:absolute; inset:0; width:100%; height:100%;
+      object-fit:cover; display:block;
       transform: scale(1.05); opacity: 0;
       transition: transform 1200ms cubic-bezier(.2,.6,.2,1), opacity 800ms ease;
     }
-    .page-loaded .hero img { transform: scale(1.0); opacity: 1; }
-    @media (max-width: 768px){ .hero img { height: 320px; } }
+    .page-loaded .hero__media video,
+    .page-loaded .hero__media img{ transform: scale(1.0); opacity: 1; }
 
     .hero::after { /* soft gradient for text legibility */
       content:""; position:absolute; inset:0;
@@ -109,9 +128,20 @@
     }
     .hero__copy p { margin: 0 0 1rem; font-size: 1.05rem; opacity: .95; }
     .hero .button.primary {
+      display: inline-flex; align-items:center; justify-content:center;
       background: var(--lux-accent); border-color: transparent; color:#fff;
       border-radius: 999px; padding: .9rem 1.4rem;
       box-shadow: 0 10px 26px rgba(138,115,78,.24);
+      letter-spacing: .18em; text-transform: uppercase; font-weight: 600;
+      text-align: center;
+    }
+
+    /* If the user prefers less motion or reduced data, hide the video and let the poster show */
+    @media (prefers-reduced-motion: reduce){
+      .hero__media video{ display:none; }
+    }
+    @media (prefers-reduced-data: reduce){
+      .hero__media video{ display:none; }
     }
 
     /* ---------- Trust band ---------- */
@@ -168,21 +198,11 @@
     }
     .tiles.tiles--lux article:hover .content { opacity: 1; transform: translateY(0); }
 
-    /* Buttons */
+    /* Buttons (fallback styles shared elsewhere) */
     .button, .actions .button, a.button.primary {
-      display: inline-flex;               /* ensures perfect centering */
-      align-items: center;                /* vertical center */
-      justify-content: center;            /* horizontal center */
-      text-align: center;                 /* text center */
-      border-radius: 999px;
-      padding: .7rem 1.1rem;
       border: 1px solid var(--lux-border);
       transition: transform 180ms ease, box-shadow 180ms ease, filter 140ms ease;
-      letter-spacing: .18em;
-      text-transform: uppercase;
-      font-weight: 600;
     }
-    .button.primary { background: var(--lux-accent); border-color: transparent; color:#fff; }
     .button.primary:hover { filter: brightness(1.04); }
     .button:hover { transform: translateY(-2px); box-shadow: var(--lux-shadow); }
 
@@ -240,23 +260,29 @@
     <div id="main">
       <div class="inner">
 
-        <!-- HERO with overlay content -->
-        <section class="hero reveal" aria-label="Brand hero">
-          <!-- Cloudinary hero (with responsive srcset) -->
-          <img
-            src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg"
-            srcset="
-              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_800/v1760713090/pexels-olly-3756045_chihfn.jpg 800w,
-              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760713090/pexels-olly-3756045_chihfn.jpg 1200w,
-              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg 1600w,
-              https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_2000/v1760713090/pexels-olly-3756045_chihfn.jpg 2000w"
-            sizes="(max-width: 768px) 100vw, 100vw"
-            alt="Travel and home essentials by ELIRA LIVING">
+        <!-- HERO — Full-bleed background video -->
+        <section class="hero full-bleed reveal" aria-label="Brand hero">
+          <div class="hero__media" aria-hidden="true">
+            <video
+              autoplay
+              muted
+              playsinline
+              loop
+              preload="metadata"
+              poster="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1600/v1760713090/pexels-olly-3756045_chihfn.jpg"
+            >
+              <source src="https://res.cloudinary.com/dkk8ohmu7/video/upload/v1760725624/9145751-uhd_4096_2160_25fps_imqp8n.mp4" type="video/mp4">
+              <!-- Optional: add a WebM version if you upload one later -->
+            </video>
+          </div>
+
           <div class="hero__content">
             <div class="hero__copy">
               <h1>Everyday goods for calm, tidy living.</h1>
               <p class="lede">Designed in Finland. Durable materials, gentle on the eye. Four essentials—no fuss.</p>
-              <div class="actions"><a href="#products" class="button primary">Shop the collection</a></div>
+              <div class="actions">
+                <a href="#products" class="button primary">Shop the collection</a>
+              </div>
             </div>
           </div>
         </section>
@@ -308,7 +334,7 @@
             </a>
           </article>
 
-          <!-- Luggage Bag (Cloudinary image added) -->
+          <!-- Luggage Bag (Cloudinary image) -->
           <article>
             <span class="image">
               <img src="https://res.cloudinary.com/dkk8ohmu7/image/upload/v1760724045/ChatGPT_Image_Oct_17_2025_08_59_57_PM_ra1z75.png" alt="Luggage Bag">
@@ -386,7 +412,7 @@
 
   <!-- Interactions (reveal + header shrink) -->
   <script>
-    // Page-loaded (for hero zoom)
+    // Page-loaded (for hero media zoom-in)
     window.addEventListener('load', function () {
       document.documentElement.classList.add('page-loaded');
     });
